// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentTechnicalTableResults component in desktop view renders correctly 1`] = `
<div>
  <div
    class="DocumentTechnicalTableResults-root-1"
  >
    <div>
      <div
        class="Accordion-root-18"
      >
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-19 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-22"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product-base-code\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-24"
            >
              product name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-11"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-9"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-6 format-icon"
                        data-name="Layer 2"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19 2H6v28h21V10Zm7 27H7V3h12v7h7Z"
                          style="fill: #aeb1b1;"
                        />
                      </svg>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-9"
                    >
                      asset-type-code
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-8"
                    >
                      <div
                        class="Tooltip-root-43"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-55 iconButton IconButton-42-54 IconButton-text-57"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-5"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-10"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                            fill="currentColor"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentTechnicalTableResults component in mobile view renders correctly 1`] = `
<div>
  <div
    class="DocumentTechnicalTableResults-root-64"
  >
    <div>
      <div
        class="Accordion-root-81"
      >
        <div
          class="MuiPaper-root MuiAccordion-root Accordion-item-82 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-85"
            data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"product-base-code\\",\\"action\\":\\"Selector – Accordion\\"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent-87"
            >
              product name
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails-74"
                  >
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-72"
                    >
                      <svg
                        class="DocumentTechnicalTableResults-formatIcon-69 format-icon"
                        data-name="Layer 2"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19 2H6v28h21V10Zm7 27H7V3h12v7h7Z"
                          style="fill: #aeb1b1;"
                        />
                      </svg>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-iconContainer-72"
                    >
                      asset-type-code
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-infoIconContainer-71"
                    >
                      <div
                        class="Tooltip-root-106"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root-118 iconButton IconButton-42-117 IconButton-text-120"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root DocumentTechnicalTableResults-tooltipIcon-68"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="DocumentTechnicalTableResults-downloadIconContainer-73"
                    >
                      <a
                        data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost:9000/document.pdf\\"}"
                        download="pim document title"
                        href="http://localhost:9000/document.pdf"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <svg
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                            fill="currentColor"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
